# star-client

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.default.toml  fly.toml
.github/workflows/: release.yml
crates/star-backend/: Cargo.toml  Dockerfile
crates/star-backend/src/: db.rs  main.rs  routes.rs  types.rs
crates/star-client/: Cargo.toml  build.rs
crates/star-client/src/: app.rs  assets.rs  config.rs  main.rs  tray.rs  updater.rs
crates/star-client/src/discord/: rpc.rs
crates/star-client/src/game/: history.rs  match_data.rs  mod.rs  party.rs  players.rs  state.rs
crates/star-client/src/overlay/: hotkeys.rs  mod.rs  theme.rs  ui.rs
crates/star-client/src/riot/: api.rs  auth.rs  endpoints.rs  lockfile.rs  mod.rs  types.rs  websocket.rs
crates/star-client/src/star/: client.rs  mod.rs  presence.rs
crates/star-client/src/stats/: loadouts.rs  mod.rs  performance.rs  rank.rs
